// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Icon Branded - icon facebook renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--facebook\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon google-plus renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--google-plus\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon instagram renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--instagram\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon linkedin renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--linkedin\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon pinterest renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--pinterest\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon rss renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--rss\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon skype renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--skype\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon twitter renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--twitter\\"></use>
</svg>
"
`;

exports[`EC - Icon Branded - icon youtube renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#branded--youtube\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon audio renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--audio\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon book renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--book\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon brochure renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--brochure\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon budget renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--budget\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon calendar renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--calendar\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon copy renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--copy\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon data renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--data\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon digital renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--digital\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon edit renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--edit\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon energy renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--energy\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon euro renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--euro\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon faq renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--faq\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon feedback renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--feedback\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon file renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--file\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon gear renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--gear\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon generic-lang renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--generic-lang\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon global renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--global\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon growth renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--growth\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon image renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--image\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon infographic renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--infographic\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon language renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--language\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon livestreaming renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--livestreaming\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon location renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--location\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon multiple-files renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--multiple-files\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon organigram renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--organigram\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon package renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--package\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon presentation renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--presentation\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon print renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--print\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon regulation renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--regulation\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon search renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--search\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon share renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--share\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon spinner renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--spinner\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon spreadsheet renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--spreadsheet\\"></use>
</svg>
"
`;

exports[`EC - Icon General - icon video renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#general--video\\"></use>
</svg>
"
`;

exports[`EC - Icon Notifications - icon error renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#notifications--error\\"></use>
</svg>
"
`;

exports[`EC - Icon Notifications - icon information renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#notifications--information\\"></use>
</svg>
"
`;

exports[`EC - Icon Notifications - icon success renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#notifications--success\\"></use>
</svg>
"
`;

exports[`EC - Icon Notifications - icon warning renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#notifications--warning\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon check renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--check\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon check-filled renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--check-filled\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon close renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--close\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon close-filled renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--close-filled\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon corner-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--corner-arrow\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon download renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--download\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon external renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--external\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon fullscreen renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--fullscreen\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon rounded-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--rounded-arrow\\"></use>
</svg>
"
`;

exports[`EC - Icon UI - icon solid-arrow renders correctly 1`] = `
"<svg class=\\"ecl-icon ecl-icon--m\\" focusable=\\"false\\" aria-hidden=\\"true\\">
  <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--solid-arrow\\"></use>
</svg>
"
`;
